# torah-stream-api

./: .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  docker-deploy.sh  docker-entrypoint.sh  gunicorn.conf.py  pyproject.toml  readme.md  shell.nix  todo.py
api/: admin.py  models.py  schema.py  types.py  utils.py
api/management/commands/: import_shiurim.py
api/migrations/: 0001_initial.py  0002_category_series_category.py  0003_alter_category_options_alter_series_options_and_more.py  0004_alter_series_podcast_alter_series_vodcast.py  0005_alter_shiur_options_alter_shiur_size_and_more.py  0006_series_is_legacy.py  0007_category_created_at_category_updated_at_and_more.py  0008_alter_category_created_at_alter_category_updated_at.py  0009_shiur_imported_series_shiur_imported_title.py  0010_alter_shiur_created_at_alter_shiur_updated_at.py  0011_speaker_shiur_categories_shiur_speaker.py  0012_alter_shiur_options_rename_track_shiur_position_and_more.py  0013_alter_shiur_series_alter_shiur_speaker_and_more.py
api/templates/admin/: shiur_category_intermediate.html
app/: settings.py  urls.py
