[tool.poetry]
name = "torah-stream-api"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "torah_stream_api"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.3"
strawberry-graphql = "^0.142.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
